kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fixwurx
  labels:
    app: fixwurx
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: fixwurx

---
apiVersion: v1
kind: Service
metadata:
  name: fixwurx-redis
  labels:
    app: fixwurx
    component: redis
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
    name: redis
  selector:
    app: fixwurx
    component: redis
